Wed Feb 14 03:14:42 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic::userinfo): should support
	  empty password.  [ruby-core:10290]

	* lib/uri/generic.rb (URI::Generic::set_password): password can be
	  cleared by nil.  [ruby-core:10290]

Wed Feb 14 00:30:07 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (init_unixsock): path may contain NUL for
	  abstract unix sockets.  [ruby-core:10288]

Tue Feb 13 02:21:12 2007  Sam Roberts  <sroberts@uniserve.com>

	* io.c (rb_f_syscall): Fix buffer overflow with syscall
	  arguments.  [ruby-bugs:PR#8541]

Mon Feb 12 13:57:30 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_variant2val): support VT_I8, VT_UI8.

Mon Feb 12 11:48:52 2007  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/dublincore.rb, lib/rss/maker/dublincore.rb: dc_rightses
	-> dc_rights_list. dc_rightses still exists for backward
	compatibility. [ruby-core:8350]
	* test/rss/test_maker_dc.rb: added tests for dc_rights_list.

Sun Feb 11 22:40:17 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_ptrtype2val): ole_type, ole_type_detail
	  should not return "VARIANT,VARIANT".

Sun Feb 11 22:11:05 2007  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/xml-stylesheet.rb (RSS::XMLStyleSheet#initialize):
	kept backward compatibility.

Sun Feb 11 22:10:08 2007  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/parser.rb (RSS::ListenerMixin#start_else_element): used
	const_defined? instead of constants.include?.

Sun Feb 11 18:47:14 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_val2olevariantdata): 
	  WIN32OLE_VARIANT#new accepts nil when variant type is VT_ARRAY.

	* test/win32ole/test_win32ole_variant.rb: ditto.

	* ext/win32ole/win32ole.c: small refactoring.

Sun Feb 11 07:42:25 2007  Akinori MUSHA  <knu@iDaemons.org>

	* lib/cgi.rb (CGI::QueryExtension::read_multipart): Properly parse